--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "http-proxy-middleware": "^0.17.4",
     "imports-loader": "^0.7.1",
     "minimist": "^1.2.0",
+    "node-sass": "^4.5.3",
     "run-sequence": "^1.2.2",
+    "sass": "^1.0.0-beta.1",
     "string-loader": "0.0.1",
     "vinyl-named": "^1.1.0",
     "yo3": "^3.0.9"
