--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "my WebAPP",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev":"gulp --env development",
+    "build":"gulp pack --env production"
   },
   "repository": {
     "type": "git",
