--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "my WebAPP",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+   	"db":"json-server src/mock/mock.js -p 9000",
     "dev":"gulp --env development",
     "build":"gulp pack --env production"
   },
